Add: Grid Add: 2 Labels für Dead und Alive Entities ---: DataBinding Chg: Canvas Größe angepasst

--- a/GameOfLife/GameOfLife/MainWindow.xaml
+++ b/GameOfLife/GameOfLife/MainWindow.xaml
@@ -5,10 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GameOfLife"
         mc:Ignorable="d"
-        Title="MainWindow" Height="611.392" Width="723.481">
-    <Grid>
-        <Canvas x:Name="zeichenfläche" HorizontalAlignment="Left" Height="500" Margin="130,39,0,0" VerticalAlignment="Top" Width="500"/>
-        <Button x:Name="buttonStartStop" Content="Starte Animation!" HorizontalAlignment="Left" Margin="10,112,0,0" VerticalAlignment="Top" Width="107" Click="Button_Click" />
-
+        Title="MainWindow" Height="771.267" Width="1011.608" ContentRendered="Window_ContentRendered">
+    
+    <Grid Background="Black">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel Orientation="Vertical" Grid.Column="0" Background="Aqua">
+            <Button x:Name="buttonStartStop" Content="Starte Animation!" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" Width="120" Click="Button_Click"/>
+            <TextBlock Text="{Binding Path=CountAliveEntity, UpdateSourceTrigger=PropertyChanged}" Margin="10"/>
+            <TextBlock Text="{Binding Path=CountDeadEntity, UpdateSourceTrigger=PropertyChanged}" Margin="10"/>
+        </StackPanel>
+        <Canvas x:Name="zeichenfläche" Height="auto" Margin="10" Width="auto" Grid.Column="1" Background="Beige"/>
     </Grid>
 </Window>
