--- a/GameOfLife/GameOfLife/MainWindow.xaml
+++ b/GameOfLife/GameOfLife/MainWindow.xaml
@@ -20,7 +20,7 @@
             <TextBlock Text="{Binding Path=CountTurn, UpdateSourceTrigger=PropertyChanged, StringFormat=Generation: {0}}" Margin="10"/>
 
             <CheckBox Content="Max Generationen" Margin="10" x:Name="cbMaxGen" IsChecked="False"/>
-            <TextBox x:Name="tbMaxGeneration" IsEnabled="{Binding Path=IsChecked, ElementName=cbMaxGen}" Width="100" Margin="10" Text="100"/>
+            <TextBox x:Name="tbMaxGeneration" IsEnabled="{Binding Path=IsChecked, ElementName=cbMaxGen}" Width="100" Margin="10" Text="{Binding MaxGenerationCount, Mode=OneWayToSource, FallbackValue=100}"/>
         </StackPanel>
         <Canvas x:Name="zeichenfläche" Height="auto" Margin="10" Width="auto" Grid.Column="1" Background="Beige"/>
     </Grid>
