--- a/GameOfLife/GameOfLife/MainWindow.xaml
+++ b/GameOfLife/GameOfLife/MainWindow.xaml
@@ -23,6 +23,10 @@
 
             <WrapPanel Name="OptionPanel" Orientation="Vertical" Background="Beige" IsEnabled="{Binding EnableOptions}">
                 <Button x:Name="RandomField" Content="Randomize Field" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" Width="120" Click="RandomField_Click"/>
+                <StackPanel Orientation="Vertical">
+                    <Button x:Name="EmptyField" Content="Empty Field" HorizontalAlignment="Left" Margin="5" VerticalAlignment="Top" Width="120" Click="EmptyField_Click"/>
+                    <CheckBox Content="Manuelle Generationen" Margin="5" x:Name="cbManGen" IsChecked="False"/>
+                </StackPanel>
                 <CheckBox Content="Max Generationen" Margin="10" x:Name="cbMaxGen" IsChecked="False"/>
                 <TextBox x:Name="tbMaxGeneration" IsEnabled="{Binding Path=IsChecked, ElementName=cbMaxGen}" Width="100" Margin="10" Text="{Binding MaxGenerationCount, Mode=OneWayToSource, FallbackValue=25}"/>
             </WrapPanel>
